# volumize

./: MainWindow.py  README.md  pyproject.toml  volumize_runner.py
scripts/: recompile
volumize/: MainWindow.py  __main__.py  drop_listview.py  models.py  resources_rc.py  utils.py  volumize.py  workers.py
volumize/resources/: resources.qrc
volumize/ui/: mainwindow.ui
