[tool.poetry]
name = "volumize"
version = "0.1.0"
description = "Archive comic chapters into volumes."
authors = ["Li Junyi <47441677+immanuelhume@users.noreply.github.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
rope = "^0.19.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
